--- a/PID/PID_tools.ipynb
+++ b/PID/PID_tools.ipynb
@@ -2,89 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c0605ce7-c4fe-42a5-9cfb-0aef46a4a5cd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "include(\"IIT_PhiR_tools.jl\");\n",
-    "\n",
-    "using DelimitedFiles\n",
-    "using Random,Distributions,CausalityTools, DelimitedFiles\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "970015e4-2f96-4d5e-b2d3-513c867b0353",
+   "id": "c0605ce7-c4fe-42a5-9cfb-0aef46a4a5cd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "PID (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "SystemError: opening file \"/home/gustavo/Documents/LASCON/Project/synergisticDendrites/PID/PID.jl\": No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "SystemError: opening file \"/home/gustavo/Documents/LASCON/Project/synergisticDendrites/PID/PID.jl\": No such file or directory",
+      "",
+      "Stacktrace:",
+      "  [1] systemerror(p::String, errno::Int32; extrainfo::Nothing)",
+      "    @ Base ./error.jl:176",
+      "  [2] #systemerror#80",
+      "    @ ./error.jl:175 [inlined]",
+      "  [3] systemerror",
+      "    @ ./error.jl:175 [inlined]",
+      "  [4] open(fname::String; lock::Bool, read::Nothing, write::Nothing, create::Nothing, truncate::Nothing, append::Nothing)",
+      "    @ Base ./iostream.jl:293",
+      "  [5] open",
+      "    @ ./iostream.jl:275 [inlined]",
+      "  [6] open(f::Base.var\"#387#388\"{String}, args::String; kwargs::Base.Pairs{Symbol, Union{}, Tuple{}, NamedTuple{(), Tuple{}}})",
+      "    @ Base ./io.jl:382",
+      "  [7] open",
+      "    @ ./io.jl:381 [inlined]",
+      "  [8] read",
+      "    @ ./io.jl:462 [inlined]",
+      "  [9] _include(mapexpr::Function, mod::Module, _path::String)",
+      "    @ Base ./loading.jl:1484",
+      " [10] include(fname::String)",
+      "    @ Base.MainInclude ./client.jl:476",
+      " [11] top-level scope",
+      "    @ In[2]:2"
+     ]
     }
    ],
    "source": [
-    "function IMf(x,y)\n",
-    "    \n",
-    "    ps1 = probabilities(Dataset(x));\n",
-    "    \n",
-    "    h1 = ComplexityMeasures.entropy(ps1)\n",
-    "\n",
-    "    ps2 = probabilities(Dataset(y));\n",
-    "\n",
-    "    h2 = ComplexityMeasures.entropy(ps2)\n",
-    "\n",
-    "    ps3 = probabilities(Dataset([x y]));\n",
-    "\n",
-    "    h3 = ComplexityMeasures.entropy(ps3)\n",
-    "\n",
-    "    return h1+h2-h3\n",
-    "end\n",
-    "\n",
-    "function RedSinIndex(S,Y)\n",
-    "    \n",
-    "    Ss = IMf(S,Y)\n",
-    "    \n",
-    "    nt = size(S)[2]\n",
-    "    \n",
-    "    RSI = 1*Ss\n",
-    "    \n",
-    "    for i in 1:nt\n",
-    "       \n",
-    "        RSI -=  IMf(S[:,i],Y)\n",
-    "        \n",
-    "    end\n",
-    "    \n",
-    "    return RSI\n",
-    "end\n",
-    "\n",
-    "function PID(T,X)\n",
-    "    \n",
-    "    RR = minimum([IMf(T,X[:,1]),IMf(T,X[:,2])])\n",
-    "    \n",
-    "    ru1 = IMf(X[:,1],T)\n",
-    "    ru2 = IMf(X[:,2],T)\n",
-    "        \n",
-    "    U1 = ru1 - RR\n",
-    "\n",
-    "    U2 = ru2 - RR\n",
-    "    \n",
-    "    Syn = IMf(X,T) - ru1 - ru2 + RR\n",
-    "        \n",
-    "    return [RR,U1,U2,Syn]\n",
-    "end\n"
+    "include(\"IIT_PhiR_tools.jl\");\n",
+    "include(\"PID.jl\");\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f60d1d0a-0a1f-4e9b-9686-95271a72f1b2",
    "metadata": {},
    "outputs": [
@@ -118,7 +80,7 @@
        " \"Time_serie_Pyrp22_Simdt_0.0125_tbin_10_CoincRat_1.0_.csv\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +89,7 @@
     "allfiles = readdir()\n",
     "\n",
     "filesR = [i for i in allfiles if occursin(\".csv\", i)]\n",
-    "    \n",
+    "\n",
     "filesR = sort(filesR,by=x->parse(Int32,split(x,\"_\")[end-3]))"
    ]
   },
@@ -876,7 +838,7 @@
     "    \n",
     "    return XX,AA,Collec0\n",
     "\n",
-    "\"\"\""
+    "\"\"\"\n"
    ]
   },
   {
